<resources>
    <string name="app_name">Да сготвим</string>
    <string name="app_subname">Да хапнем</string>
    <string name="searchBtn">Търси</string>
    <string name="main_src">Изображение</string>
    <string name="main_icon">Иконка</string>
    <string name="back_arrow">Стрелка назад</string>
    <string name="logo">Лого</string>
    <string name="prof_photo_desc">Профил</string>
    <string name="smile">Усмивка</string>
    <string name="denied">За достъп до тази секция трябва да влезнеш в профила си от \"Профил\" секцията!</string>
    <string name="reg_question"><a href="">Регистриране?</a></string>
    <string name="internet">За регистрацията в приложението е нужна Интернет връзка!</string>
    <string name="skip_btn">Пропусни</string>
    <string name="registrationText">Регистрация</string>
    <string name="nameЕditText">Потребителско име*</string>
    <string name="emailEditText">E-mail*</string>
    <string name="passwordEditText">Парола*</string>
    <string name="rePassEditText">Повтори паролата*</string>
    <string name="registerBtn">Регистриране</string>
    <string name="haveAccountText"><a href="">Вече имам акаунт</a></string>
    <string name="google_login">Влизане чрез Google</string>
    <string name="facebook_login">Влизане чрез Facebook</string>
    <string name="linked_login">Влизане чрез LinkedIn</string>
    <string name="register_text">С регистрацията си приемам</string>
    <string name="terms_link"><a href="">условията за ползване</a></string>
    <string name="and">и</string>
    <string name="policy_link"><a href="">политиката за поверителност на данните</a>.</string>
    <string name="ok">Добре</string>
    <string name="usernameReq">Моля, въведете потребителско име!</string>
    <string name="rememberMe">Запомни ме</string>
    <string name="forgotten_pass">Моля, попълнете E-mail адреса си и Вашата нова парола!</string>
    <string name="login_btn">Вход</string>
    <string name="forgot_pass"><a href="">Забравена парола?</a></string>
    <string name="welcome">Добре дошъл в приложението!&#128578;</string>
    <string name="to_approve">Рецепти, чакащи за одобрение: </string>
    <string name="whatToCook_title">Какво да сготвя</string>
    <string name="search_title">Намери рецепта</string>
    <string name="myRecipes_title">Моите рецепти</string>
    <string name="favoriteRecipes_title">Любими рецепти</string>
    <string name="availableProducts_title">Налични продукти</string>
    <string name="shoppingList_title">Списък за пазаруване</string>
    <string name="recentlyViewed_title">Последно разглеждани</string>
    <string name="recentlyAdded_title">Последно добавени</string>
    <string name="home">Начало</string>
    <string name="info_title">Информация</string>
    <string name="addRecipe_title">Добави рецепта</string>
    <string name="contacts_title">Контакти</string>
    <string name="terms_menu">Условия</string>
    <string name="breakfast">Закуска</string>
    <string name="lunch">Обяд</string>
    <string name="dinner">Вечеря</string>
    <string name="dessert">Десерт</string>
    <string name="addProductEditText">Добави продукт</string>
    <string name="categoryQuestion">Какво искаш да сготвиш?</string>
    <string name="vegetarianQuestion">Вегетарианска ли да бъде рецептата?</string>
    <string name="productsQuestion">С/без нужда от допълнителни продукти?</string>
    <string name="three">До 3 продукта</string>
    <string name="five">До 5 продукта</string>
    <string name="without">Без нужда</string>
    <string name="myProducts">(Все още нямаш добавени продукти в секцията \"Налични продукти\")</string>
    <string name="category">Категория:</string>
    <string name="prepare_time">Време за приготвяне:</string>
    <string name="portions">Порции:</string>
    <string name="ingredients">Необходими продукти:</string>
    <string name="steps">Начин на приготвяне:</string>
    <string name="fav">Добави в любими:</string>
    <string name="unapproved">Изчакваща</string>
    <string name="approve">Одобряване</string>
    <string name="not_approve">Отхвърляне</string>
    <string name="productsList">(Все още нямаш добавени продукти)</string>
    <string name="toAddBtn">Добави</string>
    <string name="product">Име на продукта:</string>
    <string name="prodNameReq">Въведи име на продукта!</string>
    <string name="quantity">Количество:</string>
    <string name="deleteAllBtn">Изтрий всички</string>
    <string name="addBtn">Добавяне</string>
    <string name="unit">Мерна единица:</string>
    <string name="fieldReq">Въведи промяна поне в едно от полетата, за да направиш редакция!</string>
    <string name="quantityReq">Количеството не може да бъде 0!</string>
    <string name="unitReq">Въведи валидна мерна единица: брой/я, мл., л., гр., кг., ч.ч., к.ч., с.л., ч.л., щипка, щипки, пакетче, пакетчета!</string>
    <string name="editBtn">Редактиране</string>
    <string name="delete_confirm">Сигурен ли си, че искаш да изтриеш всички продукти?</string>
    <string name="no_products">Все още нямаш добавени продукти!</string>
    <string name="myData">Лични данни:</string>
    <string name="name">Име:</string>
    <string name="edit">Редактиране на профила</string>
    <string name="email">E-mail:</string>
    <string name="photo_desc">Профилна снимка</string>
    <string name="share_icon">Икона</string>
    <string name="floating_desc">Бутон \"Редактиране\"</string>
    <string name="exit">Изход</string>
    <string name="choose_title">Задай своята снимка</string>
    <string name="gallery">Избери от галерия</string>
    <string name="takeAPhoto">Снимай с камерата</string>
    <string name="removePhoto">Премахни снимката</string>
    <string name="nameToEdit">Име</string>
    <string name="emailToEdit">E-mail</string>
    <string name="aboutApp_title">За приложението</string>
    <string name="aboutMe">Добре дошъл в приложението \"Да сготвим\".</string>
    <string name="ownership">Собственост</string>
    <string name="ownership_info">Настоящето приложение е собственост на Михаела Велинова Малинова с ЕГН: 981001****, наричана по-долу Собственик. Съдържанието на това приложение е под закрила на Закона за авторското право и сродните му права.</string>
    <string name="general_terms">Общи условия</string>
    <string name="general_terms_info">Потребителите получават правото да използват услугите на приложението \"Да сготвим\" единствено за лични/нетърговски цели, освен ако изрично не е договорено друго със Собственика.
        \nЗабранява се препечатането на цели материали, без изрично писмено съгласие на Собственика.
        \nСобственикът има пълното право да НЕ одобрява или да премахва материали, неотговарящи на очакваното съдържание или такива, съдържащи нецензурни думи и изрази, както и всякакви форми на обиди.
        \nСобственикът има пълното право да променя дизайна и всичко останало, което не се отнася лично до потребителя, като съдържание или условия за ползване, без предварително уведомление.</string>
    <string name="liable">Отговорност</string>
    <string name="liable_info">Цялата информация в приложението се предоставя без гаранция от страна на Собственика за нейната ненакърнимост и безопасност от злонамерени атаки от трети лица.
        \nСобственикът не носи отговорност за:
        \n- Възниканали вреди, свързани с достъпа или липсата на достъп, както и всякакви други вреди, породени от използването на приложението;
        \n- Съдържанието/Информацията, включена от публикувани линкове, както и последиците от тяхното посещаване;
        \n- Данните, предоставени от потребителите;
        \n- Мненията и коментарите, изразени от потребителите;
        \n- Съдържанието/Информацията на публикуваните реклами;
        \n- Събраните данни при влизане в приложението чрез други сайтове или приложения.</string>
    <string name="confidentiality">Конфиденциалност</string>
    <string name="confidentiality_info">Собственикът гарантира и се застрахова с това, че единствената информация, която ще пази в своята база данни, относно потребителя е: име, e-mail и парола, както и допълнително добавените от потребителя с течение на използването на приложението рецепти, продукти и снимки/картинки.
        \nСобственикът може да предоставя събраната статистическа информация, както и да изготвя вътрешни статистики за целите на маркетинга(своите и на свои партньори).
        \nОтварянето на "страниците" и/или линковете в приложението, както и влизането и регистрацията в него представляват декларация от страна на потребителя, че е запознат и приема уловията за ползване.</string>
    <string name="policy_info">Настоящият \"документ\" има за цел да Ви уведоми, че ценим високо Вашите лични данни и, че полагаме всички необходими усилия за тяхното опазване.
        \nС развитието на технологиите и приложението е възможно да се наложи промяна в Политиката за поверителност. Препоръчваме Ви редовно да преглеждате нейното съдържание.</string>
    <string name="data_title">Какви данни събираме?</string>
    <string name="data_info">Това са само данни, които ни предоставяте при регистрирането/влизането в приложението чрез индивидуален профил, както и при връзка със Собственика чрез формуляра в секция \"Контакти\".</string>
    <string name="processing_title">Защо обработваме личните Ви данни?</string>
    <string name="processing_info">Обработваме Вашите лични данни, за да изпълним задълженията си съгласно закона.
        \nВсички най-важни данни, като парола, са криптирани и неразчетими от трети лица.
        \nСъхраняването на данните Ви е необходимо за така наречената потребителска сесия, за да не се налага при всяко отваряне на приложението да влизате в профила си отново и отново.</string>
    <string name="providing_title">Предоставяме ли лични данни на други лица?</string>
    <string name="providing_info">Данните, които можем да предоставим на други лица, са единствено под формата на събрана статистическа информация за целите на маркетинга.</string>
    <string name="rights_title">Какви са Вашите права относно личните Ви данни?</string>
    <string name="rights_info">В случай, че решите да не ни предоставите личните си данни, то услугите, които сме в състояние да Ви предложим, ще бъдат ограничени.</string>
    <string name="connection_title">Как може да се свържете с нас?</string>
    <string name="connection_info">Ако имате въпроси или коментари относно съдържаниео на настоящата Политика, може да се свържете със Собственика чрез E-mail: <b>malinova29@gmail.com/mmalinova@mydigitalassistant.bg</b> или в случай, че вече сте влезли в приложението - чрез секцията \"Контакти\".</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
</resources>