<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".controller.register.SignUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            android:id="@+id/ownership"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ownership"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/ownership_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ownership_info"
            android:textColor="@color/black"
            android:layout_below="@id/ownership"/>
        <TextView
            android:id="@+id/general_terms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/general_terms"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/ownership_info"/>
        <TextView
            android:id="@+id/general_terms_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/general_terms_info"
            android:textColor="@color/black"
            android:layout_below="@id/general_terms"/>
        <TextView
            android:id="@+id/liable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/liable"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/general_terms_info"/>
        <TextView
            android:id="@+id/liable_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/liable_info"
            android:textColor="@color/black"
            android:layout_below="@id/liable"/>
        <TextView
            android:id="@+id/confidentiality"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/confidentiality"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/liable_info"/>
        <TextView
            android:id="@+id/confidentiality_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/confidentiality_info"
            android:textColor="@color/black"
            android:layout_below="@id/confidentiality"/>
        <Button
            android:id="@+id/register_okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confidentiality_info"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:iconPadding="2dp">
        </Button>
    </RelativeLayout>
</ScrollView>