<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.info.TermsOfUseActivity">
    <include android:id="@+id/tool" layout="@layout/toolbar" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/login_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:layout_gravity="end"
        app:headerLayout="@layout/main_login"
        android:visibility="invisible"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tool"
        android:layout_above="@id/bottom_nav"
        android:background="@color/background">

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">
            <include
                android:id="@+id/action_bar"
                layout="@layout/action_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/policy_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/action_bar"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/policy_info"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/data_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/policy_info"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/data_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/data_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/data_info"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/data_title"/>

            <TextView
                android:id="@+id/processing_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/data_info"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/processing_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/processing_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/processing_info"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/processing_title"/>

            <TextView
                android:id="@+id/providing_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/processing_info"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/providing_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/providing_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/providing_info"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/providing_title"/>

            <TextView
                android:id="@+id/rights_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/providing_info"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:text="@string/rights_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/rights_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rights_info"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/rights_title"/>

            <TextView
                android:id="@+id/connection_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rights_info"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/connection_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/connection_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/connection_info"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@id/connection_title"/>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_nav"
        app:itemBackground="@color/beige"
        app:itemIconTint="@color/black"
        app:menu="@menu/bottom_menu"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="unlabeled"/>
</RelativeLayout>