<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/beige">

    <ImageView
        android:layout_width="76dp"
        android:layout_height="57dp"
        android:layout_centerInParent="true"
        android:cropToPadding="false"
        android:src="@drawable/ic_logo_toolbar"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/my_products"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_my_products"
        android:contentDescription="@string/availableProducts_title" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/prof_photo_desc" />

</RelativeLayout>