<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/beige"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/categoryQuestion"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textViewCategory"
        app:layout_constraintStart_toStartOf="@+id/textViewCategory"
        app:layout_constraintTop_toBottomOf="@id/textViewCategory">

        <RadioButton
            android:id="@+id/radio_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/breakfast"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radio_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:text="@string/lunch"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/secondRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radio_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dinner"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radio_dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:text="@string/dessert"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>