<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/beige"
    tools:context=".view.search.SearchActivity">

    <TextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_confirm"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm"
        android:layout_marginStart="54dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/yes"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:iconPadding="2dp"
        app:layout_constraintStart_toStartOf="@+id/confirm"
        app:layout_constraintTop_toBottomOf="@+id/confirm" />

    <Button
        android:id="@+id/noBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm"
        android:layout_marginEnd="54dp"
        android:layout_toEndOf="@id/okBtn"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/no"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:iconPadding="2dp"
        app:layout_constraintEnd_toEndOf="@+id/confirm"
        app:layout_constraintTop_toBottomOf="@+id/confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>